# AppCardTestingScripts

./: CMakeLists.txt  README.md  README.txt
RAS/: AddR1ACKeys.py.in  ClinicEditSetup.py.in  DISPLAY1-MainMenu.py.in  DISPLAY2-PostCardMainMenu.py.in  DISPLAY3-PostcardSetupMenu.py.in  DISPLAY3A-EditSiteParameters.py.in  DISPLAY3B-EditUniversalBox.py.in  DISPLAY3C-OverrideDivisionReturnAddress.py.in  DISPLAY3D-ViewPostCardSiteParameters.py.in  DISPLAY3E-CheckPostCardNotiFltrScheduledOptions.py.in  DISPLAY3F-CheckPostCardSystemConnectivity.py.in  DISPLAY4-PostCardCrossWalkTemplateMenu.py.in  DISPLAY4A-EditCrosswalkClinic.py.in  DISPLAY4B-DisplayCrosswalkClinic.py.in  DISPLAY4C-DeleteAllBlueBoxText.py.in  DISPLAY4D-EditTemplate.py.in  DISPLAY4E-DisplayTemplate.py.in  DISPLAY4F-InactivateTemplate.py.in  DISPLAY4G-DeleteTemplatesAndPointers.py.in  DISPLAY5-PostCardTransmissionMenu.py.in  DISPLAY5A-PostCardTransmissionRpt.py.in  DISPLAY5B-PostcardSFTPTransmissionLog.py.in  DISPLAY5C-PurgePostcardTransmissionData.py.in  DISPLAY5D-ManualTransmitToPostalsoftSvr.py.in  DISPLAY5E-ReprintCancelApptPostcards.py.in  DISPLAY5F-ReprintNoShowPostcards.py.in  DISPLAY5G-ReprintPreApptPostcards.py.in  DISPLAY6-PostCardReportMenu.py.in  DISPLAY6A-CorrectPatientAddressErrorRpt.py.in  DISPLAY6B-ClinicsNotInCrossWalk.py.in  DISPLAY6C-ClinicsInCrosswalk.py.in  DISPLAY6D-CheckCrosswalk.py.in  DISPLAY6E-BlueboxTextClinicRpt.py.in  DISPLAY6F-CrosswalkClinicTemplateSetupRpt.py.in  DISPLAY6G-UserSetupCrosswalkRpt.py.in  DISPLAY6H-ClinicSetupSpdsheetRpt.py.in  DISPLAY6I-ClinicSetupStatusRpt.py.in  DISPLAY6K-MakeCancelApptPhoneNRRpt.py.in  DISPLAY7-CollectPtAddrForBulkMain.py.in  DISPLAY7A-PrintPtAddressesByAppt.py.in  (+15 more)
Selenium/: AddInactivationReason.py  AddOverrideAddress.py  AddTemplate.py  AttachTemplate.py  CloneTemplate.py  DeleteClinicSetup.py  DeleteInactivationReason.py  DeleteOverrideAddress.py  DeletePostcardText.py  DeleteTemplate.py  DetachTemplate.py  EditDemographics.py  EditOverrideAddress.py  InactivateClinic.py  OverrideDefaults.py  ReactivateClinic.py  SiteParameters.py  UpdateClinicAddress.py  libs.py
Sikuli/AddInactivationReason.sikuli/: AddInactivationReason.html  AddInactivationReason.py
Sikuli/AddOverrideAddress.sikuli/: AddOverrideAddress.html  AddOverrideAddress.py
Sikuli/AddTemplate.sikuli/: AddTemplate.html  AddTemplate.py
Sikuli/AttachTemplate.sikuli/: AttachTemplate.html  AttachTemplate.py
Sikuli/CloneTemplate.sikuli/: CloneTemplate.html  CloneTemplate.py
Sikuli/DeleteClinicSetup.sikuli/: DeleteClinicSetup.html  DeleteClinicSetup.py
Sikuli/DeleteInactivationReason.sikuli/: DeleteInactivationReason.html  DeleteInactivationReason.py
Sikuli/DeleteOverrideAddress.sikuli/: DeleteOverrideAddress.html  DeleteOverrideAddress.py
Sikuli/DeletePostcardText.sikuli/: DeletePostcardText.html  DeletePostcardText.py
Sikuli/DeleteTemplate.sikuli/: DeleteTemplate.html  DeleteTemplate.py
Sikuli/DetachTemplate.sikuli/: DetachTemplate.html  DetachTemplate.py
Sikuli/EditDemographics.sikuli/: EditDemographics.html  EditDemographics.py
Sikuli/EditOverrideAddress.sikuli/: EditOverrideAddress.html  EditOverrideAddress.py
Sikuli/InactivateClinic.sikuli/: InactivateClinic.html  InactivateClinic.py
Sikuli/OverrideDefaults.sikuli/: OverrideDefaults.html  OverrideDefaults.py
Sikuli/ReactivateClinic.sikuli/: ReactivateClinic.html  ReactivateClinic.py
Sikuli/SiteParameters.sikuli/: SiteParameters.html  SiteParameters.py
Sikuli/UpdateClinicAddress.sikuli/: UpdateClinicAddress.html  UpdateClinicAddress.py
Sikuli/libs.sikuli/: libs.html  libs.html.in  libs.py  libs.py.in
